// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-hosted-copilot-sdk - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Build, deploy, and modify GitHub Copilot SDK apps on Azure. MANDATORY when codebase contains @github/copilot-sdk or CopilotClient in package.json. PREFER OVER azure-prepare when copilot-sdk markers detected. WHEN: copilot SDK, @github/copilot-sdk, copilot-powered app, build copilot app, prepare copilot app, add feature to copilot app, modify copilot app, BYOM, bring your own model, CopilotClient, createSession, sendAndWait, azd init copilot. DO NOT USE FOR: deploying already-prepared copilot-sdk apps (use azure-deploy), general web apps without copilot SDK (use azure-prepare), Copilot Extensions, Foundry agents (use microsoft-foundry).",
  "extractedKeywords": [
    "agents",
    "already-prepared",
    "apps",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "bicep",
    "bring",
    "build",
    "byom",
    "cli",
    "codebase",
    "contains",
    "copilot",
    "copilot-powered",
    "copilot-sdk",
    "copilotclient",
    "createsession",
    "deploy",
    "deploying",
    "detected",
    "extensions",
    "feature",
    "foundry",
    "general",
    "github",
    "hosted",
    "identity",
    "init",
    "json",
    "mandatory",
    "markers",
    "microsoft-foundry",
    "model",
    "modify",
    "over",
    "package",
    "prefer",
    "prepare",
    "sdk",
    "sendandwait",
    "when",
    "without",
    "your",
  ],
  "name": "azure-hosted-copilot-sdk",
}
`;

exports[`azure-hosted-copilot-sdk - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agents",
  "already-prepared",
  "apps",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "bicep",
  "bring",
  "build",
  "byom",
  "cli",
  "codebase",
  "contains",
  "copilot",
  "copilot-powered",
  "copilot-sdk",
  "copilotclient",
  "createsession",
  "deploy",
  "deploying",
  "detected",
  "extensions",
  "feature",
  "foundry",
  "general",
  "github",
  "hosted",
  "identity",
  "init",
  "json",
  "mandatory",
  "markers",
  "microsoft-foundry",
  "model",
  "modify",
  "over",
  "package",
  "prefer",
  "prepare",
  "sdk",
  "sendandwait",
  "when",
  "without",
  "your",
]
`;
